changed text to fix contrast

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     background: lightgray;
-    color: #666;
+    color: mediumblue;
 }
 
 .heading {
